--- a/src/app/components/link-list/link-list-item/link-list-item.css
+++ b/src/app/components/link-list/link-list-item/link-list-item.css
@@ -4,7 +4,7 @@
   height: 55px;
   min-width: 100px;
   max-width: 200px;
-  padding: 0px 25px;
+  padding: 0 25px;
   display: inline-grid;
   place-items: center;
 }
