--- a/src/app/components/page-heading/page-heading.css
+++ b/src/app/components/page-heading/page-heading.css
@@ -2,7 +2,7 @@
   display: grid;
   place-content: center;
   justify-items: center;
-  height: 385px;
+  padding: 90px 0;
 }
 
 .separator {
@@ -15,6 +15,7 @@
 .title {
   margin-top: 10px;
   max-inline-size: min(100%, 32ch);
+  text-align: center;
 }
 
 .subtitle {
@@ -23,6 +24,6 @@
 
 @media (max-width: 1100px) {
   .header {
-    height: 300px;
+    padding: 50px 0;
   }
 }
