--- a/src/app/blocks/footer/footer.css
+++ b/src/app/blocks/footer/footer.css
@@ -1,7 +1,8 @@
 .footer {
+  display: grid;
+  align-items: center;
   min-height: var(--footer-height);
   height: 79px;
-  padding-top: 28px;
   background-color: var(--color-white);
 }
 
