--- a/src/app/blocks/header/header-link/header-link.css
+++ b/src/app/blocks/header/header-link/header-link.css
@@ -3,7 +3,10 @@
   line-height: var(--lh-17);
   font-weight: var(--fw-400);
   color: var(--color-primary);
+  margin-top: 4px;
   padding-bottom: 4px;
+  border-bottom: 2px solid transparent;
+  display: block;
 }
 
 .link:hover,
