--- a/src/css/variables/layout.css
+++ b/src/css/variables/layout.css
@@ -2,17 +2,36 @@
   --header-height: 133px;
   --footer-height: 72px;
   --viewport-width-max: 1385px;
-  --layout-gutter: 32px;
+  --layout-gutter: 60px;
   --page-content-end-padding-big: 200px;
   --page-content-end-padding-medium: 100px;
   --page-content-end-padding-small: 80px;
 
   /* Um diese breakpoint variablen in media queries verwenden zu können müsste man SCSS oder PostCSS verwenden, weil die mediaqueries vor dem variablen ausgewertet werden */
-  --media-general-gradation-med: 1100px;
+  --media-general-gradation-1: 1385px;
+  --media-general-gradation-2: 1100px;
   --media-tablet-main: 768px;
   --media-tablet-min: 601px;
   --media-tablet-max: 1280px;
   --media-mobile-main: 360px;
   --media-mobile-min: 360px;
   --media-mobile-max: 430px;
+}
+
+@media (max-width: 1100px) {
+  :root {
+    --layout-gutter: 50px;
+  }
+}
+
+@media (max-width: 601px) {
+  :root {
+    --layout-gutter: 40px;
+  }
+}
+
+@media (max-width: 360px) {
+  :root {
+    --layout-gutter: 32px;
+  }
 }
