--- a/src/app/pages/movie/movie.html
+++ b/src/app/pages/movie/movie.html
@@ -1,6 +1,6 @@
 @if (item.data(); as data) {
   <app-resource-detail-layout [hasSlider]="data.images.length > 0">
-    <app-page-heading
+    <app-heading
       resourceDetailHeading
       location="Film Details"
       [title]="data.title"
