--- a/src/app/pages/planets/planets.html
+++ b/src/app/pages/planets/planets.html
@@ -1,5 +1,5 @@
 <app-resource-grid-layout>
-  <app-page-heading title="Planets" />
+  <app-heading title="Planets" />
   @let data = collection.data();
   @if (data.items.length > 0) {
     <app-image-grid>
