--- a/src/app/pages/characters/characters.html
+++ b/src/app/pages/characters/characters.html
@@ -1,5 +1,5 @@
 <app-resource-grid-layout>
-  <app-page-heading title="Characters" />
+  <app-heading title="Characters" />
   @let data = collection.data();
   @if (data.items.length > 0) {
     <app-image-grid>
