--- a/src/app/pages/character/character.html
+++ b/src/app/pages/character/character.html
@@ -1,5 +1,5 @@
 @if (item.data(); as data) {
-  <app-resource-detail-layout [hasSlider]="data.images.length > 0">
+  <app-resource-detail-layout>
     <app-heading resourceDetailHeading location="Character Details" [title]="data.name" />
 
     <section resourceDetailDetails aria-labelledby="details-heading">
