--- a/src/app/pages/error/error.html
+++ b/src/app/pages/error/error.html
@@ -1,4 +1,6 @@
-<div class="error g-layout-container">
-  <h1>Fehler beim Laden</h1>
-  <p>Die angeforderte Ressource konnte nicht verarbeitet werden.</p>
-</div>
+<app-default-layout>
+  <div class="error g-text-1">
+    <h1>Fehler beim Laden</h1>
+    <p>Die angeforderte Ressource konnte nicht verarbeitet werden.</p>
+  </div>
+</app-default-layout>
