--- a/src/app/pages/movies/movies.html
+++ b/src/app/pages/movies/movies.html
@@ -1,4 +1,4 @@
-<app-resource-grid-layout>
+<app-default-layout>
   <app-heading title="Movies" />
   @let data = collection.data();
   @if (data.items.length > 0) {
@@ -25,4 +25,4 @@
       }
     </app-image-grid>
   }
-</app-resource-grid-layout>
+</app-default-layout>
