--- a/src/app/blocks/header/header.css
+++ b/src/app/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   min-height: var(--header-height);
   display: grid;
-  align-items: center;
+  align-content: center;
   background-color: var(--color-white);
 }
 
@@ -29,7 +29,6 @@
 .navigation {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   column-gap: 50px;
   row-gap: 12px;
 }
