--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,4 +1,4 @@
-<div class="g-layout-container home">
+<div class="home">
   <svg class="logo" width="989" height="441" role="img" aria-label="Star Wars Logo">
     <use
       href="assets/svg-sprite-sheet/build/sprite-sheet.e12f08b580e7ccf1473c0a9c4f93af72c96f622d9c82a2554e31c36f1c78c626
