--- a/src/app/pages/movie/movie.html
+++ b/src/app/pages/movie/movie.html
@@ -1,5 +1,5 @@
 @if (item.data(); as data) {
-  <app-resource-detail-layout [hasSlider]="data.images.length > 0">
+  <app-resource-detail-layout>
     <app-heading
       resourceDetailHeading
       location="Film Details"
