rename layout components

--- a/src/app/pages/characters/characters.html
+++ b/src/app/pages/characters/characters.html
@@ -1,4 +1,4 @@
-<app-default-layout>
+<app-default-page-layout>
   <app-heading title="Characters" />
   @let data = collection.data();
   @if (data.items.length > 0) {
@@ -23,4 +23,4 @@
       }
     </app-image-grid>
   }
-</app-default-layout>
+</app-default-page-layout>
