--- a/src/app/pages/error/error.html
+++ b/src/app/pages/error/error.html
@@ -1,6 +1,6 @@
-<app-default-layout>
+<app-default-page-layout>
   <div class="error g-text-1">
     <h1>Fehler beim Laden</h1>
     <p>Die angeforderte Ressource konnte nicht verarbeitet werden.</p>
   </div>
-</app-default-layout>
+</app-default-page-layout>
