--- a/src/app/pages/character/character.html
+++ b/src/app/pages/character/character.html
@@ -1,40 +1,40 @@
-@if (item.data(); as data) {
-  <app-resource-detail-layout>
-    <app-heading resourceDetailHeading location="Character Details" [title]="data.name" />
+<app-detail-page-layout>
+  @let data = item.data();
 
+  @if (data) {
+    <app-heading resourceDetailHeading location="Character Details" [title]="data.name" />
+  }
+
+  @if (data) {
     <section resourceDetailDetails aria-labelledby="details-heading">
       <app-labeled-box>
         <h2 class="g-title-3" id="details-heading" #label>Details:</h2>
         <app-row-description-list [items]="descriptionRows()" />
       </app-labeled-box>
     </section>
+  }
 
-    @if (data.images.length) {
-      <app-image-slider
-        resourceDetailSlider
-        [images]="data.images"
-        [viewportHeight]="374"
-      />
-    }
+  @if (data && data.images.length) {
+    <app-image-slider resourceDetailSlider [images]="data.images" [viewportHeight]="374" />
+  }
 
-    @if (data.filmIds.length) {
-      <app-labeled-box
-        resourceDetailLinks
-        appVisibleTrigger
-        (becameVisible)="onFilmLinksVisible()"
-      >
-        <h2 class="g-title-3" id="details-heading" #label>Films:</h2>
-        @let filmItems = films.data();
-        @if (filmItems.length) {
-          <app-link-list>
-            @for (film of filmItems; track $index) {
-              <app-link-list-item [linkUri]="['/movie', film.id]">
-                {{ film.title }}
-              </app-link-list-item>
-            }
-          </app-link-list>
-        }
-      </app-labeled-box>
-    }
-  </app-resource-detail-layout>
-}
+  @if (data && data.filmIds.length) {
+    <app-labeled-box
+      resourceDetailLinks
+      appVisibleTrigger
+      (becameVisible)="onFilmLinksVisible()"
+    >
+      <h2 class="g-title-3" id="details-heading" #label>Films:</h2>
+      @let filmItems = films.data();
+      @if (filmItems.length) {
+        <app-link-list>
+          @for (film of filmItems; track $index) {
+            <app-link-list-item [linkUri]="['/movie', film.id]">
+              {{ film.title }}
+            </app-link-list-item>
+          }
+        </app-link-list>
+      }
+    </app-labeled-box>
+  }
+</app-detail-page-layout>
