add postcss to allow reusing media breapoint definition

--- a/src/app/blocks/header/header-link/header-link.css
+++ b/src/app/blocks/header/header-link/header-link.css
@@ -15,13 +15,13 @@
   border-bottom: 2px solid var(--color-primary);
 }
 
-@media (max-width: 768px) {
+@media (--media-tablet-main) {
   .link {
     font-size: var(--fs-18);
   }
 }
 
-@media (max-width: 430px) {
+@media (--media-mobile-max) {
   .link {
     font-size: var(--fs-16);
   }
