--- a/src/app/layouts/detail-page-layout/detail-page-layout.css
+++ b/src/app/layouts/detail-page-layout/detail-page-layout.css
@@ -25,7 +25,7 @@
   row-gap: 47px;
 }
 
-@media (max-width: 1385px) {
+@media (--desktop-gradation-1) {
   .resource-detail-body-layout {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-template-areas:
@@ -35,7 +35,7 @@
   }
 }
 
-@media (max-width: 1100px) {
+@media (--desktop-gradation-2) {
   .resource-detail-body-layout {
     grid-template-columns: auto;
     grid-template-rows: auto;
