--- a/src/css/classes/layout.css
+++ b/src/css/classes/layout.css
@@ -8,13 +8,13 @@
   padding-bottom: var(--page-content-end-padding-big);
 }
 
-@media (max-width: 1100px) {
+@media (--desktop-gradation-2) {
   .g-page-content {
     padding-bottom: var(--page-content-end-padding-medium);
   }
 }
 
-@media (max-width: 601px) {
+@media (--media-tablet-min) {
   .g-page-content {
     padding-bottom: var(--page-content-end-padding-small);
   }
