--- a/src/css/variables/layout.css
+++ b/src/css/variables/layout.css
@@ -6,31 +6,21 @@
   --page-content-end-padding-big: 200px;
   --page-content-end-padding-medium: 100px;
   --page-content-end-padding-small: 80px;
-
-  /* Um diese breakpoint variablen in media queries verwenden zu können müsste man SCSS oder PostCSS verwenden, weil die mediaqueries vor dem variablen ausgewertet werden */
-  --media-general-gradation-1: 1385px;
-  --media-general-gradation-2: 1100px;
-  --media-tablet-main: 768px;
-  --media-tablet-min: 601px;
-  --media-tablet-max: 1280px;
-  --media-mobile-main: 360px;
-  --media-mobile-min: 360px;
-  --media-mobile-max: 430px;
 }
 
-@media (max-width: 1100px) {
+@media (--desktop-gradation-2) {
   :root {
     --layout-gutter: 50px;
   }
 }
 
-@media (max-width: 601px) {
+@media (--media-tablet-min) {
   :root {
     --layout-gutter: 40px;
   }
 }
 
-@media (max-width: 430px) {
+@media (--media-mobile-max) {
   :root {
     --layout-gutter: 25px;
   }
